grafico menù admin

--- a/src/main/resources/templates/networkManager/MenùNM.html
+++ b/src/main/resources/templates/networkManager/MenùNM.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!doctype html system "http://www.thymeleaf.org/dtd/xhtml-strict-thymleaf-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
