--- a/src/main/resources/templates/admin/MenùAdmin.html
+++ b/src/main/resources/templates/admin/MenùAdmin.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!doctype html system "http://www.thymeleaf.org/dtd/xhtml-strict-thymleaf-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,13 +10,24 @@
     <link rel="stylesheet" href="../../static/css/bootstrap.css" type="text/css" th:href="@{/css/bootstrap.css}" />
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css" type="text/css" th:href="@{/css/bootstrap.min.css}" />
 
-<link rel="stylesheet" href="../../static/css/table.css" type="text/css"
+    <link rel="stylesheet" href="../../static/css/table.css" type="text/css"
 	th:href="@{/css/table.css}" />
+
+    <script src="../../static/js/jquery-3.3.1.slim.min.js" th:src="@{/js/jquery-3.3.1.slim.min.js}"></script>
+    <script src="../../static/js/Chart.min.js" th:src="@{/js/Chart.min.js}"></script>
+    <script src="../../static/js/Chart.js" th:src="@{/js/Chart.js}"></script>
 
 </head>
 
 <body>
 	<div th:replace="/admin/headerAdmin :: header"> </div>
+
+    <div th:replace="/admin/multiBar :: bar"> </div>
+
+
+    <div th:if="${mode=='null'}">
+
+	</div>
 	
 	<div th:if="${mode=='listaUtenti'}">
 		<div th:insert="/admin/listaUtenti :: lista" >...</div>
@@ -27,10 +38,15 @@
 	</div>
 
 
+
+
+
+
+
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-<script src="../../static/js/jquery-3.3.1.slim.min.js" th:src="@{/js/jquery-3.3.1.slim.min.js}"></script>
 <script src="../../static/js/popper.min.js" th:src="@{/js/popper.min.js}"></script>
 <script src="../../static/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 
