--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="text-center">
-    <form class="form-signin" th:action="@{/}" th:object="${user}" method="POST">
+    <form class="form-signin" th:action="@{/home}" th:object="${user}" method="POST">
         <img class="mb-4" src="../static/icon/user.png" th:src="@{/icon/user.png}" alt="" width="72" height="72">
 
         <div th:if="${login=='error'}">
@@ -27,6 +27,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Login</h1>
 
         <label for="inputUsername" class="sr-only">Username</label>
+
         <input type="text" id="inputUsername" th:field="*{username}" class="form-control" placeholder="Username" required autofocus>
 
         <label for="inputPassword" class="sr-only">Password</label>
@@ -34,5 +35,6 @@
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
+
 </body>
 </html>
