Sistemati alcuni bug sul login

--- a/src/main/resources/templates/admin/headerAdmin.html
+++ b/src/main/resources/templates/admin/headerAdmin.html
@@ -42,7 +42,7 @@
                         <img th:src="@{/icon/userProfile.png}" src="../../static/icon/userProfile.png" th:hspace="10" th:text="'Benvenuto, '+${session.user.username}"></a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown">
                         <a class="dropdown-item" href="#"><img th:src="@{/icon/editProfile.png}" src="../../static/icon/editProfile.png"> Gestione Profilo</a>
-                        <a class="dropdown-item" href="/login"><img th:src="@{/icon/exit.png}" src="../../static/icon/exit.png"> Logout</a>
+                        <a class="dropdown-item" href="/"><img th:src="@{/icon/exit.png}" src="../../static/icon/exit.png"> Logout</a>
                     </div>
                 </li>
 
