--- a/src/main/resources/templates/admin/headerAdmin.html
+++ b/src/main/resources/templates/admin/headerAdmin.html
@@ -13,7 +13,7 @@
 <body>
 <div th:fragment="header">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/home"><strong>Amministratore</strong></a>
+        <a class="navbar-brand" href="/admin/home"><strong>Amministratore</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
