--- a/src/main/resources/templates/admin/headerAdmin.html
+++ b/src/main/resources/templates/admin/headerAdmin.html
@@ -30,8 +30,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="dropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione nodi</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown">
-                        <a class="dropdown-item" href="#">Lista nodi</a>
-                        <a class="dropdown-item" href="#">Crea nodo</a>
+                        <a class="dropdown-item" href="/admin/listaNodi">Lista nodi</a>
+                        <a class="dropdown-item" href="/admin/aggiungiNodo">Crea nodo</a>
                     </div>
                 </li>
             </ul>
