--- a/src/main/resources/templates/admin/MenùAdmin.html
+++ b/src/main/resources/templates/admin/MenùAdmin.html
@@ -15,7 +15,7 @@
 
     <script src="../../static/js/jquery-3.3.1.slim.min.js" th:src="@{/js/jquery-3.3.1.slim.min.js}"></script>
     <script src="../../static/js/Chart.min.js" th:src="@{/js/Chart.min.js}"></script>
-    <script src="../../static/js/Chart.js" th:src="@{/js/Chart.js}"></script>
+    <!--<script src="../../static/js/Chart.js" th:src="@{/js/Chart.js}"></script>-->
 
 </head>
 
