--- a/src/main/resources/templates/admin/listaUtenti.html
+++ b/src/main/resources/templates/admin/listaUtenti.html
@@ -38,7 +38,7 @@
                             <td style="width: 10%" th:text="${user.idutente}">...</td>
                             <td style="width: 40%" th:text="${user.username}">...</td>
                             <td style="width: 40%" th:text="${user.ruolo}">...</td>
-                            <td style="width: 10%" ><a th:href="@{'delete/' + ${user.idutente}}"><img th:src="@{/icon/delete.png}" src="../../static/icon/delete.png"></a></td>
+                            <td style="width: 10%" ><a th:href="@{'deleteUser/' + ${user.idutente}}"><img th:src="@{/icon/delete.png}" src="../../static/icon/delete.png"></a></td>
                         </tr>
                     </th:block>
                 </tbody>
