--- a/src/main/resources/templates/admin/creaUtente.html
+++ b/src/main/resources/templates/admin/creaUtente.html
@@ -19,12 +19,12 @@
                 <form th:action="@{/admin/registraUtente}" th:object="${user}" method="POST">
                     <div class="form-group">
                         <label>Username</label>
-                        <input type="text" class="form-control" th:field="*{username}" placeholder="Username">
+                        <input type="text" class="form-control" th:field="*{username}" placeholder="Username" required>
                     </div>
 
                     <div class="form-group">
                         <label>Password</label>
-                        <input type="password" class="form-control" th:field="*{password}" placeholder="Password">
+                        <input type="password" class="form-control" th:field="*{password}" placeholder="Password" required>
                     </div>
 
 <!--                    <div class="form-group">
