risolto bug javascript lista nodi admin

--- a/src/main/resources/templates/admin/listaNodi.html
+++ b/src/main/resources/templates/admin/listaNodi.html
@@ -89,4 +89,11 @@
 
 
 </body>
+
+<script>
+    function modificaNodo(utente) {
+        var message = /*[[${message}]]*/ 'default';
+    }
+</script>
+
 </html>
