--- a/src/main/resources/templates/networkManager/headerNM.html
+++ b/src/main/resources/templates/networkManager/headerNM.html
@@ -30,17 +30,23 @@
 					<a class="nav-link" href="#">Gestione utenti</a>
 				</li>
                 <!-- <li class="nav-item">
-                    <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione utenti</a>
+                    <a class="nav-link dropdown-toggle" id="dropdown3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione utenti</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown">
                         <a class="dropdown-item" href="#">Lista utenti</a>
                         <a class="dropdown-item" href="#">Aggiungi utente</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="dropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione nodi</a>
+                    <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione nodi</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown">
                         <a class="dropdown-item" href="#">Lista nodi</a>
                         <a class="dropdown-item" href="#">Crea nodo</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="dropdown2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione task</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown">
+                        <a class="dropdown-item" href="#">Lista task</a>
                     </div>
                 </li> -->
             </ul>
