--- a/src/main/resources/templates/user/MenùUser.html
+++ b/src/main/resources/templates/user/MenùUser.html
@@ -13,9 +13,15 @@
 </head>
 	
 <body>
-<div th:replace="/user/headerUser :: header"> </div>
+	<div th:replace="/user/headerUser :: header"> </div>
 
-
+	<div th:if="${mode=='null'}">
+        <div th:replace="/user/multiBar :: bar"> </div>
+	</div>
+	
+	<div th:if="${mode=='listaNodi'}">
+		<div th:insert="/user/listaNodi :: listaN" >...</div>
+	</div>
 
 
 <!-- Optional JavaScript -->
