--- a/src/main/resources/templates/user/headerUser.html
+++ b/src/main/resources/templates/user/headerUser.html
@@ -23,6 +23,12 @@
                 <li class="nav-item active">
 					<a class="nav-link" href="#">Gestione nodi</a>
 				</li>
+				<!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione nodi</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown">
+                        <a class="dropdown-item" href="#">Lista nodi</a>
+                    </div>
+                </li> -->
             </ul>
 
             <ul class="navbar-nav navbar-right justify-content-end">
