--- a/src/main/resources/templates/user/headerUser.html
+++ b/src/main/resources/templates/user/headerUser.html
@@ -18,17 +18,21 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExample09">
+         <!-- <div class="collapse navbar-collapse" id="navbarsExample09">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
 					<a class="nav-link" href="#">Gestione nodi</a>
-				</li>
-				<!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gestione nodi</a>
+				</li>  -->
+				<div class="collapse navbar-collapse" id="navbarsExample09">
+            	<ul class="navbar-nav mr-auto">
+				 <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="dropdown1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menù</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown">
-                        <a class="dropdown-item" href="#">Lista nodi</a>
+                        <a class="dropdown-item" href="#">Stato dei tuoi nodi</a>
+                        <a class="dropdown-item" href="#">Info dei tuoi nodi</a>
+                        <a class="dropdown-item" href="#">Stato dei tuoi task</a>
                     </div>
-                </li> -->
+                </li> 
             </ul>
 
             <ul class="navbar-nav navbar-right justify-content-end">
